main.tf
terraform {
  backend "remote" {
    hostname     = "app.terraform.io"
    organization = "029DA-DevOps24"

    workspaces {
      name = "my_second_workspace"
    }
  }
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }

}
provider "aws" {
  region = "us-east-1"
}
variable "prefix" {
    type = string
    description = "Prefix for all resources"
    default = "Apr-28"
}
 resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
      Name = "${var.prefix}-vpc"
    }   
 }
 resource "aws_subnet" "public" {
    vpc_id            = aws_vpc.main.id
    cidr_block        = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    tags = {
      Name = "${var.prefix}-public-subnet"
    }
 }  
 resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = {
      Name = "${var.prefix}-igw"
    }
 }
 resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
      Name = "${var.prefix}-public-route"
    }
 }
 #resource "aws_route" "public" {
 #   route_table_id         = aws_route_table.public.id
 #  destination_cidr_block = "0.0.0.0/0"
 #   gateway_id            = aws_internet_gateway.igw.id
 #}
 resource "aws_route_table_association" "public" {
    subnet_id      = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
 }    

 module "sg"{
  source  = "app.terraform.io/029DA-DevOps24/security-030/aws"
  version = "2.0.0" 
  security_group = {
    "web-sg" = {
      description = "Security group for web server"
      vpc_id      = aws_vpc.main.id
      ingress_rules = [
        {
          description = "HTTP"
          from_port   = 80
          to_port     = 80
          protocol    = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
          priority    = 200
       },
        {
          description = "HTTPS"
          from_port   = 443
          to_port     = 443
          protocol    = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
          priority    = 202
          },
        {
            description = "SSH"
            from_port   = 22
            to_port     = 22
            protocol    = "tcp"
            cidr_blocks = ["0.0.0.0/0"]
        }   
      ]
      egress_rules = [
        {
          description = "Allow all outbound traffic"
          from_port   = 0
          to_port     = 0
          protocol    = "-1"
          cidr_blocks = ["0.0.0.0/0"]
        }
      ]   
  }  
}
 }

data "aws_ami" "amzn-linux-2023-ami" {
    most_recent = true
    owners      = ["amazon"]
    
    filter {
        name   = "name"
        values = ["amzn2-ami-hvm-*-x86_64-gp2"]
    }
}
resource "aws_instance" "web_server" {
    ami = data.aws_ami.amzn-linux-2023-ami.id
    instance_type = "t2.micro"
    subnet_id = aws_subnet.public.id
    vpc_security_group_ids = [module.sg.security_group_id["web-sg"]]
    key_name = aws_key_pair.deployer.key_name
    user_data = <<-EOF
                #!/bin/bash
                sudo yum update -y
                sudo yum install -y httpd
                sudo systemctl start httpd.service
                sudo systemctl enable httpd.service
                echo "<h1>Hello World from Bambam </h1>" > /var/www/html/index.html
                EOF
           
    tags = {
      Name = "${var.prefix}-web-instance"
    }
}
resource "aws_eip" "web_server" {
    instance = aws_instance.web_server.id
}
resource "aws_key_pair" "deployer" {
    key_name = "deployer-key"
    public_key = file("~/.ssh/id_ed25519.pub")
}
